# neural_network_from_scratch

./: CMakeLists.txt  Layer.cpp  Layer.h  MLP.cpp  MLP.h  MeanSquareLoss.cpp  MeanSquareLoss.h  Neuron.cpp  Neuron.h  Value.cpp  Value.h  main.cpp
